Fix: task add button starts out with wrong color

--- a/source/main.css
+++ b/source/main.css
@@ -149,6 +149,8 @@ body {
 	border-radius: 15px;
 	border: 3px solid black;
 	outline: none;
+	color: black;
+	background-color: rgb(242, 197, 247);
 }
 
 /* faq */
